# acvus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Grammar.md  README.md  Sample.acvus  Sample.md  Spec.md  new-format  output.txt  sample-context.json
acvus-ast/: Cargo.toml
acvus-ast/src/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  span.rs  substitute.rs  tag_content.rs  token.rs
acvus-chat/: Cargo.toml
acvus-chat-cli/: Cargo.toml
acvus-chat-cli/src/: main.rs  node.rs  project.rs
acvus-chat/src/: error.rs  lib.rs
acvus-coroutine/: Cargo.toml
acvus-coroutine/src/: lib.rs
acvus-ext/: Cargo.toml
acvus-ext-llm/src/: lib.rs
acvus-ext/src/: conversion.rs  datetime.rs  deque.rs  encoding.rs  iterator.rs  lib.rs  list.rs  option.rs  regex.rs  sequence.rs  string.rs
acvus-ext/tests/: e2e.rs
acvus-interpreter/: Cargo.toml
acvus-interpreter-test/: Cargo.toml
acvus-interpreter-test/src/: lib.rs
acvus-interpreter-test/tests/: e2e.rs  extern_fn.rs  fixtures.rs  script.rs  script_programs.rs  spawn_eval.rs
acvus-interpreter-test/tests/fixtures/arithmetic/: basic.json  comparison.json
acvus-interpreter-test/tests/fixtures/complex/: chained_pipe_squaring.json  deeply_nested_object.json  filter_logical_chain.json  filter_map_object.json  iteration_match_per_item.json  multi_storage_logical.json  nested_list_accumulator.json  object_iter_emit.json
acvus-interpreter-test/tests/fixtures/iteration/: accumulate.json  list.json  nested.json  object_destructure.json
acvus-interpreter-test/tests/fixtures/lambda/: capture_storage.json  field_access.json  filter.json  map.json
acvus-interpreter-test/tests/fixtures/list/: exact_miss.json  head_tail.json
acvus-interpreter-test/tests/fixtures/logic/: and_false.json  and_true.json  and_with_comparison.json  or_true.json  precedence.json
acvus-interpreter-test/tests/fixtures/match/: literal_hit.json  multi_arm.json  nested.json  object_destructure.json
acvus-interpreter-test/tests/fixtures/pipe/: triple_chain.json
acvus-interpreter-test/tests/fixtures/range/: inclusive.json  iteration.json  pattern_hit.json
acvus-interpreter-test/tests/fixtures/storage/: field_access.json  read.json  write_computed.json  write_then_read.json
acvus-interpreter-test/tests/fixtures/text/: format_string_expr.json  format_string_multiple.json  format_string_simple.json  mixed.json  string_concat.json  string_emit.json  text_only.json  trim_both.json  trim_left.json  trim_no_newline.json  trim_right.json
acvus-interpreter-test/tests/scripts/: collatz.acvus  grade_classifier.acvus
acvus-interpreter/src/: blob_journal.rs  builtins.rs  error.rs  executor.rs  extern_fn.rs  interner_ctx.rs  interpreter.rs  iter.rs  journal.rs  lib.rs  value.rs  verify.rs  yielder.rs
acvus-lsp/: Cargo.toml
acvus-lsp/src/: lib.rs  session.rs
acvus-lsp/tests/: equivalence.rs
acvus-macro/src/: lib.rs
acvus-mir/: Cargo.toml
acvus-mir-cli/: Cargo.toml
acvus-mir-cli/src/: main.rs
acvus-mir-host/: Cargo.toml
acvus-mir-host-macro/: Cargo.toml
acvus-mir-host-macro/src/: lib.rs  parse.rs
acvus-mir-host/src/: error.rs  ity.rs  lib.rs  registrar.rs  scope.rs  testing.rs
acvus-mir-host/tests/: tier1_basic.rs
acvus-mir-pass/: Cargo.toml
acvus-mir-pass/src/: lib.rs
acvus-mir-test/: Cargo.toml
acvus-mir-test/src/: lib.rs
acvus-mir-test/tests/: e2e.rs  inline.rs  optimized_cross_fn.rs  script.rs  user_defined_ty.rs
acvus-mir-test/tests/snapshots/: e2e__arithmetic_to_string.snap  e2e__boolean_not.snap  e2e__builtin_all.snap  e2e__builtin_any.snap  e2e__builtin_contains.snap  e2e__builtin_find.snap  e2e__builtin_fold.snap  e2e__builtin_join.snap  e2e__builtin_len.snap  e2e__builtin_reduce.snap  e2e__builtin_reverse.snap  e2e__catch_all_with_binding.snap  e2e__closure_capture_context.snap  e2e__closure_capture_local.snap  e2e__closure_capture_storage.snap  e2e__comparison_operators.snap  e2e__context_field_access.snap  e2e__context_projection_store_1depth.snap  e2e__context_projection_store_2depth.snap  e2e__context_read.snap  e2e__deeply_nested_object_access.snap  e2e__destructure_projection_read.snap  e2e__destructure_projection_shadowing.snap  e2e__destructure_projection_write.snap  e2e__equality_as_match_source.snap  e2e__error_emit_non_string.snap  e2e__error_field_access_on_int.snap  e2e__error_range_float_bounds.snap  e2e__error_tuple_arity_mismatch.snap  e2e__error_type_mismatch.snap  e2e__error_undefined_context.snap  e2e__error_undefined_storage.snap  e2e__error_undefined_variable.snap  e2e__error_variable_write_type_mismatch.snap  e2e__extern_async_call.snap  e2e__extern_async_call.snap.new  e2e__extern_fn_object_return.snap  e2e__field_access_on_destructured.snap  e2e__field_store_then_load_passes.snap  e2e__filter_object_field_equality.snap  (+166 more)
acvus-mir/src/: builtins.rs  context_registry.rs  error.rs  extern_module.rs  hints.rs  ir.rs  lib.rs  lower.rs  pass.rs  printer.rs  ser_ty.rs  solver.rs  ssa.rs  ssa_pass.rs  test.rs  ty.rs  typeck.rs  user_type.rs  variant.rs
acvus-mir/src/analysis/: cfg.rs  dataflow.rs  domain.rs  inst_info.rs  reachable_context.rs  token_liveness.rs  val_def.rs  value_transfer.rs  var_dirty.rs
acvus-mir/src/graph/: cluster.rs  extract.rs  incremental.rs  infer.rs  inliner.rs  lower.rs  mod.rs  optimize.rs  resolve.rs  tests.rs  types.rs
acvus-mir/src/optimize/: code_motion.rs  const_dedup.rs  dce.rs  drop_insertion.rs  dse.rs  mod.rs  reg_color.rs  reorder.rs  spawn_split.rs  ssa.rs  ssa_pass.rs
acvus-mir/src/validate/: init_check.rs  mod.rs  move_check.rs  type_check.rs
acvus-orchestration/: Cargo.toml
acvus-orchestration-test/src/: lib.rs
acvus-orchestration-test/tests/: e2e.rs
acvus-playground/: Cargo.toml
acvus-playground/src/: index.html  main.rs
acvus-runtime/: Cargo.toml
acvus-utils/: Cargo.toml
acvus-web/: Cargo.toml
docs/: identity-type-system.md  mir-architecture-for-compiler-engineer.md  mir-architecture.md
kovac-interpreter/: Cargo.toml
pomollu-engine/: Cargo.toml
pomollu-frontend/: Dockerfile
(+185 files in other folders)
