[workspace]
resolver = "3"
members = [
    "acvus-utils",
    "acvus-interpreter",
    "acvus-interpreter-test",
    "acvus-ast",
    "acvus-mir",
    "acvus-mir-pass",
    "acvus-mir-cli",
    "acvus-mir-test",
    "acvus-orchestration",
    "acvus-chat",
    "acvus-chat-cli",
    "acvus-ext",
    "pomollu-engine"
]

[workspace.dependencies]
rustc-hash = "2"

[profile.release]
opt-level = 'z'
lto = true