[workspace]
resolver = "3"
members = [
    "acvus-utils",
    "acvus-interpreter",
    "acvus-interpreter-test",
    "acvus-ast",
    "acvus-mir",
    "acvus-mir-cli",
    "acvus-mir-test",
    "acvus-orchestration",
    "acvus-ext",
    "acvus-ext-llm",
    "acvus-lsp",
    "pomollu-engine",
    "acvus-macro",
    "kovac-interpreter"
, "acvus-mir-host", "acvus-mir-host-macro"]

[workspace.dependencies]
rustc-hash = "2"
uuid = { version = "1", features = ["v4", "js"] }

[profile.release]
opt-level = 'z'
lto = true
