[package]
name = "acvus-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-interpreter = { path = "../acvus-interpreter" }
acvus-coroutine = { path = "../acvus-coroutine" }
acvus-mir = { path = "../acvus-mir" }
acvus-orchestration = { path = "../acvus-orchestration" }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
