[package]
name = "acvus-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-mir = { path = "../acvus-mir" }
acvus-interpreter = { path = "../acvus-interpreter" }
acvus-utils = { path = "../acvus-utils" }
futures = "0.3"
rustc-hash = { workspace = true }
regex = "1"
chrono = "0.4"
base64 = "0.22"
percent-encoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
