[package]
name = "acvus-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-orchestration = { path = "../acvus-orchestration" }
acvus-ext = { path = "../acvus-ext" }
acvus-utils = { path = "../acvus-utils" }
rustc-hash = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
