[package]
name = "acvus-mir-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-mir-pass = { path = "../acvus-mir-pass" }
acvus-utils = { path = "../acvus-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
