[package]
name = "acvus-mir-test"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-utils = { path = "../acvus-utils" }
rustc-hash = { workspace = true }

[dev-dependencies]
acvus-mir-pass = { path = "../acvus-mir-pass" }
insta = "1"
