[package]
name = "acvus-mir"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-utils = { path = "../acvus-utils" }
rustc-hash = { workspace = true }
rand = "0.9"
smallvec = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = "1"
