[package]
name = "acvus-playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acvus-playground"
path = "src/main.rs"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-interpreter = { path = "../acvus-interpreter" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
